XmkcdCmd: Adds get latest comic option