@@ -6,39 +6,69 @@ import com.shadorc.shadbot.core.command.CommandCategory;
 import com.shadorc.shadbot.core.command.Context;
 import com.shadorc.shadbot.object.Emoji;
 import com.shadorc.shadbot.object.RequestHelper;
+import com.shadorc.shadbot.utils.EnumUtil;
 import com.shadorc.shadbot.utils.ShadbotUtil;
+import discord4j.core.spec.EmbedCreateSpec;
+import discord4j.discordjson.json.ApplicationCommandOptionChoiceData;
+import discord4j.rest.util.ApplicationCommandOptionType;
 import reactor.core.publisher.Mono;
 
+import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Consumer;
 
 public class XkcdCmd extends BaseCmd {
 
+    private enum Sort {
+        LATEST, RANDOM;
+    }
+
     private static final String HOME_URL = "https://xkcd.com";
-    private static final String LAST_URL = String.format("%s/info.0.json", HOME_URL);
+    private static final String LAST_URL = "%s/info.0.json".formatted(HOME_URL);
+
+    // Cache for the latest Xkcd ID
+    private final AtomicInteger latestId;
 
     public XkcdCmd() {
         super(CommandCategory.IMAGE, "xkcd", "Show random comic from XKCD");
+        this.latestId = new AtomicInteger();
+
+        final List<ApplicationCommandOptionChoiceData> choices = List.of(
+                ApplicationCommandOptionChoiceData.builder().name("latest").value("latest").build(),
+                ApplicationCommandOptionChoiceData.builder().name("random").value("random").build());
+        this.addOption("sort", "Sorting option", true, ApplicationCommandOptionType.STRING, choices);
     }
 
     @Override
     public Mono<?> execute(Context context) {
+        final Sort sort = EnumUtil.parseEnum(Sort.class, context.getOption("sort").orElseThrow().asString());
+        final Mono<XkcdResponse> getResponse = sort == Sort.LATEST ? XkcdCmd.getLatestXkcd() : this.getRandomXkcd();
         return context.createFollowupMessage(Emoji.HOURGLASS + " (**%s**) Loading XKCD comic...", context.getAuthorName())
-                .flatMap(messageId -> XkcdCmd.getRandomXkcd()
-                        .flatMap(xkcd -> context.editFollowupMessage(messageId,
-                                ShadbotUtil.getDefaultEmbed(spec -> spec.setAuthor(
-                                        String.format("XKCD: %s", xkcd.getTitle()),
-                                        String.format("%s/%d", HOME_URL, xkcd.getNum()),
-                                        context.getAuthorAvatarUrl())
-                                        .setImage(xkcd.getImg())))));
+                .flatMap(messageId -> getResponse.flatMap(xkcd -> context.editFollowupMessage(messageId,
+                        XkcdCmd.formatEmbed(context.getAuthorAvatarUrl(), xkcd))));
     }
 
-    private static Mono<XkcdResponse> getRandomXkcd() {
-        return RequestHelper.fromUrl(LAST_URL)
-                .to(XkcdResponse.class)
-                .map(XkcdResponse::getNum)
+    private static Consumer<EmbedCreateSpec> formatEmbed(final String avatarUrl, final XkcdResponse xkcd) {
+        return ShadbotUtil.getDefaultEmbed(embed ->
+                embed.setAuthor("XKCD: %s".formatted(xkcd.getTitle()), "%s/%d".formatted(HOME_URL, xkcd.getNum()), avatarUrl)
+                        .setImage(xkcd.getImg()));
+    }
+
+    private Mono<XkcdResponse> getRandomXkcd() {
+        return Mono.fromCallable(this.latestId::get)
+                .filter(latestId -> latestId != 0)
+                .switchIfEmpty(XkcdCmd.getLatestXkcd()
+                        .map(XkcdResponse::getNum)
+                        .doOnNext(this.latestId::set))
                 .map(ThreadLocalRandom.current()::nextInt)
-                .flatMap(rand -> RequestHelper.fromUrl(String.format("%s/%d/info.0.json", HOME_URL, rand))
+                .flatMap(id -> RequestHelper.fromUrl("%s/%d/info.0.json".formatted(HOME_URL, id))
                         .to(XkcdResponse.class));
+    }
+
+    private static Mono<XkcdResponse> getLatestXkcd() {
+        return RequestHelper.fromUrl(LAST_URL)
+                .to(XkcdResponse.class);
     }
 
 }
